arreglo linea derecha
faltaba container-fluid en juego

--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
   </div>
 
     <!--texto divisiones  -->
-       
-      <div class="row">
+    <div class="container-fluid">
+      <div class="row ">
         <div class="col-12 justifi-center ">
           <p class="lead m-5 ">Juegos</p>
         </div>
       </div>
-
+    </div>
 
   <!--3 divisiones para las imagenes y descripcion  -->
       <div class="container  ">       
