--- a/index.html
+++ b/index.html
@@ -86,26 +86,31 @@
   
  
   <!--Imagen inicio  -->
-    <div id="carouselExampleFade " class="carousel slide carousel-fade  mt-5 " data-ride="carousel">
-      <div class="carousel-inner ">
-        <div class="carousel-item active mt-4">
-          <img src="imagen/1.jpg" class="d-block  w-100  " alt="">
-        </div>
-        <div class="carousel-item">
-          <img src="imagen/1.2.jpg" class="d-block w-100" alt="">
-        </div>
-        <div class="carousel-item">
-          <img src="imagen/1.3.jpg" class="d-block w-100 " alt="">
-        </div>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="imagen/1.jpg" class="d-block w-100" alt="...">
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+      <div class="carousel-item">
+        <img src="imagen/1.2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="imagen/1.3.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
   <!--texto inicio  -->
   <div class="container ">    
