--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="modal-footer d-flex justify-content-center">
           <form class=" d-block" method="GET">
             <div class="form-group">
-              <label  for="exampleInputEmail1">Nombre de Usuario</label>
+              <label  for="exampleInputEmail1">Correo electrónico</label>
               <input placeholder="Pepe001" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
               
             </div>
