html- Crear Cuenta

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
   <!-- holamundo!!-->
@@ -78,6 +79,9 @@
               <label class="form-check-label" for="exampleCheck1">Soy un robot</label>
             </div>
             <button type="submit" class="btn btn-dark">Entrar</button>
+            <div>
+              <a href="CrearCuenta.html" type="button" target="_blank" class="btn btn-dark mt-4">Crear Cuenta</a>
+            </div>
           </form>
         </div> 
       </div>
@@ -85,7 +89,7 @@
   </div>
   
  
-  <!--Imagen inicio  -->
+  <!-- inicio carrusel  -->
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -113,9 +117,9 @@
     </a>
   </div>
   <!--texto inicio  -->
-  <div class="container ">    
-    <div class="row">
-      <div class="  text-center">
+  <div class="container  ">    
+    <div class="row justify-content-center">
+      <div class="text-center">
         <h3 class="">Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
         <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
 
