--- a/CrearCuenta.html
+++ b/CrearCuenta.html
@@ -51,57 +51,70 @@
   </div>
 
 <!-- Formulario crear cuenta -->
-  <div class="container-fluid espacio">
-    <div class="container  ">
-        <form>
+  <div class="container-fluid espacio">      
+    <div class="container col-md-9 border border-info p-4 mb-4">
+        <div>
+            <h3 class="mb-4">Crear una Cuenta de JugaBuy</h3>
+        </div>
+        <form class="">            
+            <div class="form-row ">
+                <div class="form-group col-md-6">
+                    <label for="inputNombre">Nombre</label>
+                    <input type="text" class="form-control" id="inputNombre">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputDate">Fecha Nacimiento</label>
+                    <input type="date" class="form-control" id="inputDate">
+                </div>
+
+            </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputEmail4">Correo electrónico</label>
-                <input type="email" class="form-control" id="inputEmail4">
+                <input type="email" class="form-control" id="inputEmail4" required>
               </div>
               <div class="form-group col-md-6">
                 <label for="inputPassword4">Contraseña</label>
                 <input type="password" class="form-control" id="inputPassword4">
               </div>
             </div>
-            <div>
-                <label for="phone">Teléfono</label>
-                <input type="tel" name="telefono" id="inputTel" placeholder="9-30574896" pattern="[0-9]{1}-[0-9]{8}" >
-            </div>
-            <div class="form-group">
-              <label for="inputAddress">Dirección</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-            </div>
-            <div class="form-group">
-              <label for="inputAddress2">Address 2</label>
-              <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-            </div>
             <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputCity">City</label>
-                <input type="text" class="form-control" id="inputCity">
-              </div>
-              <div class="form-group col-md-4">
-                <label for="inputState">State</label>
-                <select id="inputState" class="form-control">
-                  <option selected>Choose...</option>
-                  <option>...</option>
-                </select>
-              </div>
-              <div class="form-group col-md-2">
-                <label for="inputZip">Zip</label>
-                <input type="text" class="form-control" id="inputZip">
-              </div>
+                <div class="form-group col-md-6">
+                    <label for="inputRut">Rut (Sin puntos ni guión)</label>
+                    <input type="text" name="rut" id="rut" class="form-control" maxlength="9" minlength="8">                    
+                </div>
+                <div class="form-group col-md-6">                
+                    <label for="phone">Teléfono</label>
+                    <input type="tel"class="form-control" name="telefono" id="inputTel"  maxlength="9" minlength="9" >
+                </div>
             </div>
-            <div class="form-group">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck">
-                <label class="form-check-label" for="gridCheck">
-                  Check me out
-                </label>
-              </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputRegioon">Región</label>
+                    <select id="inputRegi" class="form-control">
+                      <option selected>Choose...</option>
+                      <option>...</option>
+                      <option>...</option>
+                      <option>...</option>
+                    </select>
+                  </div>
+                  <div class="form-group col-md-6">
+                    <label for="inputState">Ciudad</label>
+                    <select id="inputState" class="form-control">
+                      <option selected>Choose...</option>
+                      <option>...</option>
+                      <option>...</option>
+                      <option>...</option>
+                    </select>
+                  </div>
             </div>
-            <button type="submit" class="btn btn-primary">Sign in</button>
+            <div class="form-group ">
+                <label for="inputAddress">Dirección</label>
+                <input type="text" class="form-control" id="inputAddress" >
+            </div>
+  
+            <button type="submit" class="btn btn-dark px-4">Registrar</button>
           </form>
     </div>
 
