--- a/juegos.html
+++ b/juegos.html
@@ -22,12 +22,12 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ">         
-          <a class="navbar-brand " href="#" ><i class="fas fa-gamepad"width="9px" height="9px" ></i></i></a>
-          <li class="nav-item active ">
-            <a class="nav-link" href="#">Novedades<span class="sr-only">(current)</span></a>
+          <a class="navbar-brand " href="index.html" ><i class="fas fa-gamepad"width="9px" height="9px" ></i></i></a>
+          <li class="nav-item  ">
+            <a class="nav-link" href="index.html">Novedades<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="juegos.html">Juegos</a>
+            <a class="nav-link active" href="#">Juegos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="coleccion.html">Colección</a>
@@ -90,8 +90,8 @@
   
  
   <!-- inicio carrusel  -->
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
+  <div id="carouselExampleIndicators " class="carousel slide " data-ride="carousel">
+    <ol class="carousel-indicators ">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
