--- a/CrearCuenta.html
+++ b/CrearCuenta.html
@@ -21,15 +21,15 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ">         
-          <a class="navbar-brand " href="#" ><i class="fas fa-gamepad"width="9px" height="9px" ></i></i></a>
+          <a class="navbar-brand " href="index.html" ><i class="fas fa-gamepad"width="9px" height="9px" ></i></i></a>
           <li class="nav-item active ">
-            <a class="nav-link" href="#">Novedades<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Novedades<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Juegos</a>
+            <a class="nav-link" href="juegos.html">Juegos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Colección</a>
+            <a class="nav-link" href="coleccion.html">Colección</a>
           </li>       
         </ul>
       </div>
