--- a/coleccion.html
+++ b/coleccion.html
@@ -27,10 +27,10 @@
             <a class="nav-link" href="index.html">Novedades<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="juegos.html">Juegos</a>
+            <a class="nav-link " href="juegos.html">Juegos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Colección</a>
+            <a class="nav-link active" href="#">Colección</a>
           </li>       
         </ul>
       </div>
