--- a/index.html
+++ b/index.html
@@ -22,16 +22,13 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ">         
-          <a class="navbar-brand " href="#" ><i class="fas fa-gamepad"width="9px" height="9px" ></i></i></a>
-          <li class="nav-item active ">
-            <a class="nav-link" href="#">Novedades<span class="sr-only">(current)</span></a>
-          </li>
+          <a class="navbar-brand active " href="index.html" ><i class="fas fa-gamepad"width="9px" height="9px" ></i></i></a>
           <li class="nav-item">
             <a class="nav-link" href="juegos.html">Juegos</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="coleccion.html">Colección</a>
-          </li>       
+          <li class="nav-item  ">
+            <a class="nav-link" href="novedades.html">Novedades</a>
+          </li>      
         </ul>
       </div>
 
