--- a/juegos.html
+++ b/juegos.html
@@ -27,14 +27,11 @@
                 <ul class="navbar-nav ">
                     <a class="navbar-brand " href="index.html"><i class="fas fa-gamepad" width="9px"
                             height="9px"></i></i></a>
-                    <li class="nav-item  ">
-                        <a class="nav-link" href="index.html">Novedades<span class="sr-only">(current)</span></a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Juegos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="coleccion.html">Colección</a>
+                        <a class="nav-link" href="novedades.html">Novedades</a>
                     </li>
                 </ul>
             </div>
