--- a/novedades.html
+++ b/novedades.html
@@ -23,14 +23,11 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ">         
           <a class="navbar-brand " href="index.html" ><i class="fas fa-gamepad"width="9px" height="9px" ></i></i></a>
-          <li class="nav-item  ">
-            <a class="nav-link" href="index.html">Novedades<span class="sr-only">(current)</span></a>
-          </li>
           <li class="nav-item">
             <a class="nav-link " href="juegos.html">Juegos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#">Colección</a>
+            <a class="nav-link active" href="novedades.html">Novedades</a>
           </li>       
         </ul>
       </div>
