--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
             <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
           </svg>
       </div>
+      <!-- Carrito -->
       <div class="mr-2">
-        <a class="navbar-brand " href="#"><i class="fas fa-shopping-cart text-white" ></i></i></a>
+        <a class="navbar-brand " href="carrito.html"><i class="fas fa-shopping-cart text-white" type="button" ></i></i></a>
       </div>
       <!-- Usuario -->
       <div  >
