--- a/juegos.html
+++ b/juegos.html
@@ -102,16 +102,16 @@
 
 
     <!--sub menu-->
-    <div class="espacio2 container p-3 mb-2 bg-dark text-white ">
+    <div class="espacio2 container p-3 mb-2  bg-dark text-white redondear_menu ">
         <nav class="nav navbar-nav navbar-center text-white " style="align-content: center;">
            
-            <div >
+            <div class="col-xs-12 d-inline-flex">
                 
-            <button type="button" class="btn btn-light marlr" href="#">PC</button>
-            <button type="button" class="btn btn-light marlr" href="#">Switch</button>
-            <img src="imagen/048-tower.svg" width="75px" alt="">
-            <button type="button" class="btn btn-light marlr" href="#">PS4</button>
-            <button type="button" class="btn btn-light marlr" href="#">Xbox</button>
+            <button type="button" class="btn btn-light d-inline-flex marlr" href="#">PC</button>
+            <button type="button" class="btn btn-light d-inline-flex marlr" href="#">Switch</button>
+            <img src="imagen/048-tower.svg" width="45px" alt="">
+            <button type="button" class="btn btn-light d-inline-flex marlr" href="#">PS4</button>
+            <button type="button" class="btn btn-light d-inline-flex marlr" href="#">Xbox</button>
         </div>
         </nav>
     </div>
