--- a/index.html
+++ b/index.html
@@ -141,18 +141,18 @@
           <!--primera fila Recien llegados -->
           <div class="row justify-content-around m-2 d-sm-inline-flex">
             <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-              <img src="imagen/juegos/Hyrule Warriors.jpg" class="img-fluid " alt="">
-              <h5 class="mt-3">Hyrule Warriors: Age of Calamity NSW</h5>
+              <img src="imagen/juegos/P4_1.jpg" class="img-fluid " alt="">
+              <h5 class="mt-3">NBA 2K21 PS4</h5>
               <p class="lead">$49.990</p>                
             </div>
             <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-              <img src="imagen/juegos/Mario 3D.jpg" class="img-fluid " alt="">
-              <h5 class="mt-3">Super Mario 3D All-Stars NSW</h5>
+              <img src="imagen/juegos/P4_2.jpg" class="img-fluid " alt="">
+              <h5 class="mt-3">Zelda breath of the wild</h5>
               <p class="lead">$52.990</p>               
             </div>
             <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-              <img src="imagen/juegos/minecraft dungeon.jpg" class="img-fluid " alt="">
-              <h5 class="mt-3">Minecraft Dungeons: Hero Edition NSW</h5>
+              <img src="imagen/juegos/P4_3.jpg" class="img-fluid " alt="">
+              <h5 class="mt-3">Marvel’s Avengers PS4</h5>
               <p class="lead">$32.990</p>               
             </div>
           </div>
@@ -161,18 +161,18 @@
         <div class="carousel-item">
           <div class="row justify-content-around m-2 ">
             <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4 ">
-              <img src="imagen/juegos/nba 2k21.jpg" class="img-fluid " alt="">
-              <h5 class="mt-3">NBA 2K21 PS4</h5>
+              <img src="imagen/juegos/Sw_1.jpg" class="img-fluid " alt="">
+              <h5 class="mt-3">Minecraft Dungeons: Hero Edition NSW</h5>
               <p class="lead">$49.990</p>                
             </div>
             <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-              <img src="imagen/juegos/marvel.jpg  " class="img-fluid " alt="">
+              <img src="imagen/juegos/Sw_2.jpg " class="img-fluid " alt="">
               <h5 class="mt-3">Marvel’s Avengers PS4</h5>
               <p class="lead">$49.990</p>                
             </div>
             <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-              <img src="imagen/juegos/fifa 21 ps4.jpg" class="img-fluid " alt="">
-              <h5 class="mt-3">FIFA 21 PS4</h5>
+              <img src="imagen/juegos/Sw_3.jpg" class="img-fluid " alt="">
+              <h5 class="mt-3">Super Mario 3D All-Stars NSW</h5>
               <p class="lead">$49.990</p>               
             </div>
           </div>
