--- a/juegos.html
+++ b/juegos.html
@@ -130,59 +130,6 @@
     </div>
 
 
-    <!--Carousel Recien llegados -->
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner container" role="listbox">
-            <div class="carousel-item active">
-                <!--primera fila Recien llegados -->
-                <div class="row justify-content-around m-2 d-sm-inline-flex">
-                    <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-                        <img src="imagen/juegos/Hyrule Warriors.jpg" class="img-fluid " alt="">
-                        <h5 class="mt-3">Hyrule Warriors: Age of Calamity NSW</h5>
-                        <p class="lead">$49.990</p>
-                    </div>
-                    <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-                        <img src="imagen/juegos/Mario 3D.jpg" class="img-fluid " alt="">
-                        <h5 class="mt-3">Super Mario 3D All-Stars NSW</h5>
-                        <p class="lead">$52.990</p>
-                    </div>
-                    <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-                        <img src="imagen/juegos/minecraft dungeon.jpg" class="img-fluid " alt="">
-                        <h5 class="mt-3">Minecraft Dungeons: Hero Edition NSW</h5>
-                        <p class="lead">$32.990</p>
-                    </div>
-                </div>
-            </div>
-            <!--segunda fila Recien llegados -->
-            <div class="carousel-item">
-                <div class="row justify-content-around m-2 ">
-                    <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4 ">
-                        <img src="imagen/juegos/nba 2k21.jpg" class="img-fluid " alt="">
-                        <h5 class="mt-3">NBA 2K21 PS4</h5>
-                        <p class="lead">$49.990</p>
-                    </div>
-                    <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-                        <img src="imagen/juegos/marvel.jpg  " class="img-fluid " alt="">
-                        <h5 class="mt-3">Marvel’s Avengers PS4</h5>
-                        <p class="lead">$49.990</p>
-                    </div>
-                    <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-                        <img src="imagen/juegos/fifa 21 ps4.jpg" class="img-fluid " alt="">
-                        <h5 class="mt-3">FIFA 21 PS4</h5>
-                        <p class="lead">$49.990</p>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev test" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="fas fa-long-arrow-alt-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next test" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="fas fa-long-arrow-alt-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
 
 
 
@@ -190,19 +137,26 @@
     </div>
     <div class="container  ">
         <div class="row justify-content-around m-2  ">
-            <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 mb-4  ">
+            
+            <div class="col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
+                <div class="tamagno_carta border redondear_menu">
                 <img src="imagen/2.jpg" class="img-fluid " alt="">
-                <h4 class="">Lorem ipsum dolor sit amet consectetur adipisicing elit</h4>
+                <h5 class="">Lorem ipsum dolor sit amet consectetur adipisicing elit</h5>
                 <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-
+            </div>
             </div>
 
-            <div class="col-xs-12  col-md-3 col-lg-3   text-center shadow px-2 mb-4  ">
+            <div class="col-xs-12  col-md-3 col-lg-3  text-center shadow px-2 mb-4 ">
                 <img src="imagen/2.jpg" class="img-fluid" alt="">
                 <h4 class="">Lorem ipsum dolor sit amet consectetur adipisicing elit</h4>
                 <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
 
+            <div class="col-xs-12 col-md-3 col-lg-3  text-center shadow px-2 mb-4  ">
+                <img src="imagen/2.jpg" class="img-fluid" alt="">
+                <h4 class="">Lorem ipsum dolor sit amet consectetur adipisicing elit</h4>
+                <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
             <div class="col-xs-12 col-md-3 col-lg-3  text-center shadow px-2 mb-4  ">
                 <img src="imagen/2.jpg" class="img-fluid" alt="">
                 <h4 class="">Lorem ipsum dolor sit amet consectetur adipisicing elit</h4>
