--- a/CrearCuenta.html
+++ b/CrearCuenta.html
@@ -49,7 +49,7 @@
 
 <!-- Formulario crear cuenta -->
   <div class="container-fluid espacio">      
-    <div class="container col-md-9 border border-info p-4 mb-4">
+    <div class="container col-md-9 shadow p-4 mb-4">
         <div>
             <h3 class="mb-4">Crear una Cuenta de JugaBuy</h3>
         </div>
@@ -60,8 +60,8 @@
                     <input type="text" class="form-control" id="inputNombre">
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="inputDate">Fecha Nacimiento</label>
-                    <input type="date" class="form-control" id="inputDate">
+                  <label for="inputApellido">Apellidos</label>
+                  <input type="text" class="form-control" id="inputApellido">
                 </div>
 
             </div>
@@ -71,8 +71,18 @@
                 <input type="email" class="form-control" id="inputEmail4" required>
               </div>
               <div class="form-group col-md-6">
+                <label for="inputDate">Fecha Nacimiento</label>
+                <input type="date" class="form-control" id="inputDate">
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6">
                 <label for="inputPassword4">Contraseña</label>
                 <input type="password" class="form-control" id="inputPassword4">
+              </div>
+              <div class="form-group col-md-6">
+                <label for="inputPassword5">Repetir contraseña</label>
+                <input type="password" class="form-control" id="inputPassword5">
               </div>
             </div>
             <div class="form-row">
