--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
   <div class="container  ">    
     <div class="row justify-content-center">
       <div class="text-center">
-        <h3 class="">Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-        <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-
+        <h3 class="">Encontratás los mejores juegos.</h3>
+        <p class="lead">¿Buscas una aventura increíble para jugar hoy mismo?  </p>
+        <p class="lead">Compra aquí tus juegos</p>
       </div>
     </div>
   </div>
