--- a/juegos.html
+++ b/juegos.html
@@ -67,10 +67,10 @@
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog d-flex justify-content-center">
                 <div class="modal-content">
-                    <div class="modal-header">
+                    <div class="modal-header bg-dark text-white">
                         <h5 class="modal-title" id="staticBackdropLabel">Iniciar Sesión</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
+                            <span aria-hidden="true" class="text-white">&times;</span>
                         </button>
                     </div>
 
