--- a/novedades.html
+++ b/novedades.html
@@ -119,7 +119,7 @@
           <h5 class="mt-3">Amnesia: Rebirth llegará el 20 de octubre a PS4 y PC</h5>
           <p class="lead">El nuevo juego de terror de Frictional Games se estrenará a finales del mes que viene en PS4 y PC. Ya está disponible para su reserva.</p>
           <li>
-            <a href="https://vandal.elespanol.com/noticia/1350737995/amnesia-rebirth-llegara-el-20-de-octubre-a-ps4-y-pc/" class="text-red">Leer mas</a>
+            <a href="https://vandal.elespanol.com/noticia/1350737995/amnesia-rebirth-llegara-el-20-de-octubre-a-ps4-y-pc/" class="text-red" target="_blank">Leer mas</a>
           </li>
         </div>
         <div class="col-xs-12  col-md-6 col-lg-6 text-center shadow px-2 py-4  ">
@@ -127,7 +127,7 @@
           <h5 class="mt-3">Fall Guys se actualiza con variaciones en las pruebas, mejoras de errores y el Big Yeetus</h5>
           <p class="lead">Ya disponible la actualización de mitad de temporada de Fall Guys, un parche que además de mejorar la estabilidad del juego también incluye nuevos añadidos y cambios en las pruebas.</p>
           <li>
-            <a href="https://vandal.elespanol.com/noticia/1350737986/fall-guys-se-actualiza-con-variaciones-en-las-pruebas-mejoras-de-errores-y-el-big-yeetus/" class="text-red">Leer mas</a>
+            <a href="https://vandal.elespanol.com/noticia/1350737986/fall-guys-se-actualiza-con-variaciones-en-las-pruebas-mejoras-de-errores-y-el-big-yeetus/" class="text-red" target="_blank">Leer mas</a>
           </li>
         </div>
         <div class="col-xs-12  col-md-6 col-lg-6 text-center shadow px-2 py-4  ">
@@ -135,7 +135,7 @@
           <h5 class="mt-3">Rocket League se convertirá en free-to-play el 23 de septiembre</h5>
           <p class="lead">El próximo 23 de septiembre Rocket League pasará a ser gratuito en PS4, Xbox One, PC y Switch. Mañana se actualizará para ir implementando algunos cambios.</p>
           <li>
-            <a href="https://vandal.elespanol.com/noticia/1350737994/rocket-league-se-convertira-en-freetoplay-el-23-de-septiembre/" class="text-red">Leer mas</a>
+            <a href="https://vandal.elespanol.com/noticia/1350737994/rocket-league-se-convertira-en-freetoplay-el-23-de-septiembre/" class="text-red" target="_blank">Leer mas</a>
           </li>
         </div>
         <div class="col-xs-12  col-md-6 col-lg-6 text-center shadow px-2 py-4  ">
@@ -143,7 +143,7 @@
           <h5 class="mt-3">Sega presenta el logotipo del 30º aniversario de Sonic</h5>
           <p class="lead">La mascota de la compañía cumple 30 años en 2021 y vendrá acompañado de productos de merchandising además de nuevos juegos.</p>
           <li>
-            <a href="https://vandal.elespanol.com/noticia/1350737969/sega-presenta-el-logotipo-del-30-aniversario-de-sonic/" class="text-red">Leer mas</a>
+            <a href="https://vandal.elespanol.com/noticia/1350737969/sega-presenta-el-logotipo-del-30-aniversario-de-sonic/" class="text-red" target="_blank">Leer mas</a>
           </li>
           
         </div>
