--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
 <body>
   <!-- holamundo!!-->
   <!-- Menu -->
-  <div class="container-fluid navbar bg-dark fixed-top  ">
-    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark  container">      
+  <div class="container-fluid navbar bg-dark fixed-top   ">
+    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark  container ">      
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>    
       </button>
-      <ion-icon name="game-controller"></ion-icon>
+     
+    
 
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ">         
-          <a class="navbar-brand active " href="index.html" ><i class="fas fa-gamepad"width="9px" height="9px" ></i></i></a>
-          <li class="nav-item">
-            <a class="nav-link" href="juegos.html">Juegos</a>
+      <div class="collapse navbar-collapse " id="navbarNav">
+        <ul class="navbar-nav  ">         
+          <a class="navbar-brand active " href="index.html" ><img src="imagen/Group 1 (1).png" alt="" class="navbar-nav"></a>
+          <li class="nav-item ">
+            <a class="nav-link " href="juegos.html">Juegos</a>
           </li>
           <li class="nav-item  ">
             <a class="nav-link" href="novedades.html">Novedades</a>
