--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Soy un robot</label>
             </div>
-            <button type="submit" class="btn btn-dark">Entrar</button>
+            <a href="perfil.html" type="submit" class="btn btn-dark">Entrar</a>
             <div>
               <a href="CrearCuenta.html" type="button" target="_blank" class="btn btn-dark mt-4">Crear Cuenta</a>
             </div>
