--- a/juegos.html
+++ b/juegos.html
@@ -26,12 +26,11 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <ion-icon name="game-controller"></ion-icon>
+               
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ">
-                        <a class="navbar-brand " href="index.html"><i class="fas fa-gamepad" width="9px"
-                                height="9px"></i></i></a>
+                        <a class="navbar-brand " href="index.html" ><img src="imagen/Group 1 (1).png" alt="" class="navbar-nav"></a>                               
                         <li class="nav-item">
                             <a class="nav-link active" href="#">Juegos</a>
                         </li>
