header juegos y el otro xd

--- a/novedades.html
+++ b/novedades.html
@@ -74,9 +74,9 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Soy un robot</label>
             </div>
-            <button type="submit" class="btn btn-dark">Entrar</button>
+            <a href="perfil.html" type="submit" class="btn btn-dark">Entrar</a>
             <div>
-              <a href="CrearCuenta.html" type="button" target="_blank" class="btn btn-dark mt-4">Crear Cuenta</a>
+              <a href="CrearCuenta.html"" type="button" target="_blank" class="btn btn-dark mt-4">Crear Cuenta</a>
             </div>
           </form>
         </div> 
