detalles estéticos y likeos

--- a/juegos.html
+++ b/juegos.html
@@ -7,6 +7,7 @@
     <title>Compra Juegos</title>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@500&family=Russo+One&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="imagen/Mando ico.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -50,9 +51,10 @@
                             d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
                     </svg>
                 </div>
-                <div class="mr-2">
-                    <a class="navbar-brand " href="#"><i class="fas fa-shopping-cart text-white"></i></i></a>
-                </div>
+                      <!-- Carrito -->
+      <div class="mr-2">
+        <a class="navbar-brand " href="carrito.html"><i class="fas fa-shopping-cart text-white" type="button" ></i></i></a>
+      </div>
                 <!-- Usuario -->
                 <div>
                     <a class="navbar-brand" href="#"><i class="fas fa-user text-white " type="button"
