--- a/CrearCuenta.html
+++ b/CrearCuenta.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CrearCuenta_juegaBuy</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="shortcut icon" href="imagen/Mando ico.png">
         <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link rel="stylesheet" href="css/style.css">
