--- a/novedades.html
+++ b/novedades.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compra Juegos</title>
+    <title>Novedades</title>
+    <link rel="shortcut icon" href="imagen/Mando ico.png">
         <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -38,9 +39,10 @@
             <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
           </svg>
       </div>
-      <div class="mr-2">
-        <a class="navbar-brand " href="#"><i class="fas fa-shopping-cart text-white" ></i></i></a>
-      </div>
+          <!-- Carrito -->
+          <div class="mr-2">
+            <a class="navbar-brand " href="carrito.html"><i class="fas fa-shopping-cart text-white" type="button" ></i></i></a>
+          </div>
       <!-- Usuario -->
       <div  >
         <a class="navbar-brand" href="#"><i class="fas fa-user text-white "  type="button" data-toggle="modal" data-target="#staticBackdrop" ></i></a>        
